--- a/sass/_bg-video.scss
+++ b/sass/_bg-video.scss
@@ -5,7 +5,7 @@
     height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: .15;
+    opacity: 1;
     overflow: hidden;
     object-fit: cover;
 
