--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -1,11 +1,13 @@
 .services {
-  grid-column: col-start 2 / col-end 7;
+  grid-column: col-start 1 / col-end 8;
   margin: 15rem 0;
   display: grid;
   //grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-gap: 6rem;
   align-items: start;
+  background-color: $color-black;
+  padding: 5rem;
 }
 
 .service {
