--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,11 +1,11 @@
 // COLOR VARIABLES
-$color-primary: #3ee7d6;
+$color-primary: #37c893;
 $color-primary-dark: #1e726a;
 
-$color-secondary: #101d2c;
+$color-secondary: #051627;
 
 $color-grey-light-1: #f9f7f6;
-$color-grey-light-2: #aaa;
+$color-grey-light-2: #9299a0;
 
 $color-grey-dark-1: #757575;
 $color-grey-dark-2: #6d5d4b;
