--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,5 +1,5 @@
 .work {
-  background-color: $color-grey-dark-1;
+  background-color: $color-secondary;
   grid-column: center-start / center-end;
   padding: 3rem;
   display: grid;
