updated work section

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -25,7 +25,7 @@
     display: block;
   }
 
-  &__sold {
+  &__details {
     text-transform: uppercase;
     color: $color-grey-light-2;
     margin-top: -3px;
