--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -13,6 +13,10 @@
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -21,6 +25,10 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
 
   &__img--2 {
@@ -29,6 +37,10 @@
     grid-column: 4 / 7;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -39,6 +51,10 @@
     display: grid;
     align-content: center;
     justify-items: start;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 3 / 4;
+    }
   }
   &__text {
     font-size: 1.5rem;
