--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,10 +13,8 @@ $color-grey-dark-2: #6d5d4b;
 $color-white: #fff;
 $color-black: #000;
 // FONT VARIABLES
-$font-primary: "spartan_regular",
-sans-serif;
-$font-display: "sk",
-sans-serif;
+$font-primary: "spartan_regular", sans-serif;
+$font-display: "sk", sans-serif;
 
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em; // 1200px
@@ -72,6 +70,12 @@ a {
   display: grid;
   grid-template-rows: 100vh min-content 40vw repeat(3, min-content);
   grid-template-columns:
-    [full-start]minmax(6rem, 1fr) [center-start]repeat(8,
-    [col-start] minmax(min-content, 14rem) [col-end]) [center-end]minmax(6rem, 1fr) [full-end];
+    [full-start]minmax(6rem, 1fr) [center-start]repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    )
+    [center-end]minmax(6rem, 1fr) [full-end];
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 100vh min-content min-content repeat(3, min-content);
+  }
 }
