--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -68,14 +68,11 @@ a {
 
 .container {
   display: grid;
-  grid-template-rows: 100vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 100vh repeat(5, min-content);
   grid-template-columns:
     [full-start]minmax(6rem, 1fr) [center-start]repeat(
       8,
       [col-start] minmax(min-content, 14rem) [col-end]
     )
     [center-end]minmax(6rem, 1fr) [full-end];
-  @media only screen and (max-width: $bp-medium) {
-    grid-template-rows: 100vh min-content min-content repeat(3, min-content);
-  }
 }
