landing page style update

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ a {
 .header {
   background-color: #fff;
   grid-column: full-start / full-end;
+  background-image: url("hex.jpg");
   background-size: cover;
   background-position: center;
   display: grid;
@@ -138,11 +139,11 @@ a {
     color: #000;
     opacity: 0.6; }
   .header__big {
-    grid-row: 2 / 4;
+    grid-row: 1 / 4;
     grid-column: 1 / -1;
     align-self: center;
     justify-self: center;
-    color: #d8f9f6;
+    color: #d4f1e6;
     text-transform: uppercase;
     letter-spacing: 6rem;
     margin-right: -6rem;
@@ -151,28 +152,29 @@ a {
     opacity: 0.2;
     text-shadow: 6px 5px 0 #37c893; }
   .header__ideas {
-    grid-row: 4 / 5;
+    grid-row: 2 / 8;
     grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
-    font: bold 7rem "sk", sans-serif;
+    font: bold 8.5rem "sk", sans-serif;
     color: #000; }
   .header__brought {
-    grid-row: 5 / 6;
+    grid-row: 5 / 8;
     grid-column: 1 / -1;
     justify-self: center;
     align-self: center;
-    font: bold 7rem "sk", sans-serif;
+    font: bold 8.5rem "sk", sans-serif;
     color: #000; }
   .header__typing {
     grid-row: 7 / 8;
     grid-column: 1 / -1;
     justify-self: center;
     font-family: "spartan_regular", sans-serif;
-    font-size: 2rem;
+    font-size: 2.5rem;
     opacity: 0;
     animation: appear 0.8s ease-in forwards;
-    animation-delay: 2.9s; }
+    animation-delay: 2.9s;
+    margin-top: 5rem; }
 
 @keyframes appear {
   0% {
@@ -213,7 +215,7 @@ a {
     left: 0;
     position: absolute;
     width: 0%;
-    height: 102%;
+    height: 110%;
     background: #000;
     animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 1s; }
