--- a/css/style.css
+++ b/css/style.css
@@ -143,14 +143,14 @@ a {
     grid-column: 1 / -1;
     align-self: center;
     justify-self: center;
-    color: #d4f1e6;
+    color: #fcfcfc;
     text-transform: uppercase;
     letter-spacing: 6rem;
     margin-right: -6rem;
     font-size: 10.5rem;
     font-weight: bold;
-    opacity: 0.2;
-    text-shadow: 6px 5px 0 #37c893; }
+    opacity: .8;
+    text-shadow: 4px 2px 0px #051627; }
   .header__ideas {
     grid-row: 2 / 8;
     grid-column: 1/ -1;
