--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -68,7 +68,7 @@ a {
 
 .container {
   display: grid;
-  grid-template-rows: 100vh repeat(5, min-content);
+  grid-template-rows: 100vh min-content 60vw repeat(3, min-content);
   grid-template-columns:
     [full-start]minmax(6rem, 1fr) [center-start]repeat(
       8,
