--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -48,7 +48,7 @@
     margin-right: -6rem;
     font-size: 10.5rem;
     font-weight: bold;
-    opacity: .8;
+    opacity: 0.8;
     text-shadow: 4px 2px 0px #051627;
   }
 
@@ -109,17 +109,10 @@
 
   &__btn {
     grid-row: 8 / 10;
-    grid-column: 3 / 6;
+    grid-column: 1 / -1;
     align-self: center;
-    padding: 2.5rem;
-    justify-self: start;
-  }
-
-  &__btn2 {
-    grid-row: 8 / 10;
-    grid-column: 8 / 10;
-    align-self: center;
-    justify-self: start;
+    padding: 2rem 3.5rem;
+    justify-self: center;
   }
 }
 
