--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ a {
 
 .container {
   display: grid;
-  grid-template-rows: 100vh min-content 60vw repeat(3, min-content);
+  grid-template-rows: 100vh;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
@@ -151,20 +151,47 @@ a {
     font-weight: bold;
     opacity: 0.8;
     text-shadow: 4px 2px 0px #051627; }
+    @media only screen and (max-width: 62.5em) {
+      .header__big {
+        letter-spacing: 4rem;
+        margin-right: -4rem;
+        font-size: 9.5rem; } }
+    @media only screen and (max-width: 50em) {
+      .header__big {
+        letter-spacing: 2rem;
+        margin-right: -2rem;
+        font-size: 7.5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .header__big {
+        letter-spacing: 1rem;
+        margin-right: -1rem;
+        font-size: 5.5rem; } }
   .header__ideas {
-    grid-row: 2 / 8;
+    grid-row: 2 / 6;
     grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
     font: bold 8.5rem "sk", sans-serif;
     color: #000; }
+    @media only screen and (max-width: 50em) {
+      .header__ideas {
+        font-size: 7.5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .header__ideas {
+        font-size: 5.5rem; } }
   .header__brought {
-    grid-row: 5 / 8;
+    grid-row: 4 / 7;
     grid-column: 1 / -1;
     justify-self: center;
     align-self: center;
     font: bold 8.5rem "sk", sans-serif;
     color: #000; }
+    @media only screen and (max-width: 50em) {
+      .header__brought {
+        font-size: 7.5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .header__brought {
+        font-size: 5.5rem; } }
   .header__typing {
     grid-row: 7 / 8;
     grid-column: 1 / -1;
@@ -190,6 +217,9 @@ a {
     .header__social a:hover img {
       opacity: 0.6;
       transition: all ease 0.3s; }
+    @media only screen and (max-width: 37.5em) {
+      .header__social a {
+        grid-column: 1 / -1; } }
   .header__btn {
     grid-row: 8 / 10;
     grid-column: 1 / -1;
@@ -344,6 +374,12 @@ a {
   align-items: start;
   background-color: #051627;
   padding: 5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .services {
+      grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr)); } }
+  @media only screen and (max-width: 25em) {
+    .services {
+      grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr)); } }
 
 .service {
   display: grid;
@@ -352,6 +388,10 @@ a {
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .service {
+      grid-row-gap: 0.5rem;
+      grid-column-gap: 1.5rem; } }
   .service__icon {
     fill: #37c893;
     width: 4.5rem;
@@ -361,6 +401,9 @@ a {
   .service__text {
     font-size: 1.7rem;
     color: #9299a0; }
+    @media only screen and (max-width: 25em) {
+      .service__text {
+        grid-column: 1 / span 2; } }
 
 .contact {
   grid-column: center-start / center-end;
