--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -8,6 +8,13 @@
   align-items: start;
   background-color: $color-secondary;
   padding: 5rem;
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+  }
+  @media only screen and (max-width: $bp-xsSmall) {
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  }
 }
 
 .service {
@@ -22,6 +29,11 @@
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem;
 
+  @media only screen and (max-width: $bp-small) {
+    grid-row-gap: 0.5rem;
+    grid-column-gap: 1.5rem;
+  }
+
   &__icon {
     fill: $color-primary;
     width: 4.5rem;
@@ -33,6 +45,8 @@
   &__text {
     font-size: 1.7rem;
     color: $color-grey-light-2;
-    // grid-column: 2 / span 1;
+    @media only screen and (max-width: $bp-xsSmall) {
+      grid-column: 1 / span 2;
+    }
   }
 }
