--- a/css/style.css
+++ b/css/style.css
@@ -127,17 +127,20 @@ a {
     grid-column: 1 / 2;
     height: 4.5rem;
     align-self: center;
-    justify-self: center; }
+    justify-self: center;
+    margin-right: 4rem; }
   .header__sidebar {
-    grid-row: 10/11;
+    grid-row: 6/6;
     grid-column: 1 / 2;
     align-self: start;
     transform: rotate(90deg);
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 4px;
     font-size: 1.3rem;
     color: #000;
-    opacity: 0.6; }
+    opacity: 0.8;
+    margin-right: 6rem;
+    width: 120px; }
   .header__big {
     grid-row: 1 / 4;
     grid-column: 1 / -1;
@@ -167,7 +170,7 @@ a {
         margin-right: -1rem;
         font-size: 5.5rem; } }
   .header__ideas {
-    grid-row: 2 / 6;
+    grid-row: 2 / 7;
     grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
@@ -180,7 +183,7 @@ a {
       .header__ideas {
         font-size: 5.5rem; } }
   .header__brought {
-    grid-row: 4 / 7;
+    grid-row: 5 / 7;
     grid-column: 1 / -1;
     justify-self: center;
     align-self: center;
@@ -209,11 +212,11 @@ a {
   100% {
     opacity: 0.9; } }
   .header__social {
-    grid-row: 5 / 8;
+    grid-row: 3 / 9;
     grid-column: 10 / 11;
     justify-self: center;
     align-self: center;
-    margin-left: 6rem; }
+    margin-left: 4rem; }
     .header__social a:hover img {
       opacity: 0.6;
       transition: all ease 0.3s; }
@@ -221,7 +224,7 @@ a {
       .header__social a {
         grid-column: 1 / -1; } }
   .header__btn {
-    grid-row: 8 / 10;
+    grid-row: 9 / 10;
     grid-column: 1 / -1;
     align-self: center;
     padding: 2rem 3.5rem;
@@ -229,7 +232,7 @@ a {
 
 .reveal {
   position: relative;
-  margin: 0 auto; }
+  margin: 4rem auto 0; }
   .reveal span {
     opacity: 0;
     animation: reveal 0.0001s linear forwards;
@@ -262,10 +265,8 @@ a {
   100% {
     opacity: 1; } }
 
-#revTwo {
-  margin-bottom: 5rem; }
-  #revTwo span {
-    animation-delay: 2s; }
+#revTwo span {
+  animation-delay: 2s; }
 
 #revTwo.reveal:after {
   background: #000;
