--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,7 @@ a {
   justify-items: center; }
   @media only screen and (max-width: 50em) {
     .header {
-      grid-column: 1 / -1; } }
-  @media only screen and (max-width: 37.5em) {
-    .header {
+      grid-column: 1 / -1;
       padding: 2rem; } }
   .header__logo {
     grid-row: 1 / 2;
@@ -130,7 +128,7 @@ a {
     align-self: center;
     justify-self: center;
     margin-right: 4rem; }
-    @media only screen and (max-width: 37.5em) {
+    @media only screen and (max-width: 50em) {
       .header__logo {
         justify-self: start;
         align-self: start; } }
@@ -146,7 +144,11 @@ a {
     opacity: 0.8;
     margin-right: 6rem;
     width: 120px;
-    justify-self: start; }
+    justify-self: center;
+    margin-left: -2rem; }
+    @media only screen and (max-width: 37.5em) {
+      .header__sidebar {
+        grid-row: 9 / 11; } }
   .header__big {
     grid-row: 1 / 4;
     grid-column: 1 / -1;
@@ -176,9 +178,9 @@ a {
         font-size: 7.2rem; } }
     @media only screen and (max-width: 25em) {
       .header__big {
-        font-size: 5.5rem; } }
+        font-size: 6rem; } }
   .header__ideas {
-    grid-row: 2 / 7;
+    grid-row: 4 / 5;
     grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
@@ -202,7 +204,7 @@ a {
         font-size: 7.5rem; } }
     @media only screen and (max-width: 37.5em) {
       .header__brought {
-        font-size: 5.5rem; } }
+        font-size: 5rem; } }
   .header__typing {
     grid-row: 7 / 8;
     grid-column: 1 / -1;
@@ -224,7 +226,10 @@ a {
     grid-column: 10 / 11;
     justify-self: center;
     align-self: center;
-    margin-left: 4rem; }
+    margin-left: 2rem; }
+    @media only screen and (max-width: 37.5em) {
+      .header__social {
+        grid-row: 9 / 11; } }
     .header__social a:hover img {
       opacity: 0.6;
       transition: all ease 0.3s; }
@@ -388,7 +393,8 @@ a {
       grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr)); } }
   @media only screen and (max-width: 25em) {
     .services {
-      grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr)); } }
+      grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+      padding: 3rem; } }
 
 .service {
   display: grid;
