--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -14,6 +14,7 @@
   }
   @media only screen and (max-width: $bp-xsSmall) {
     grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+    padding: 3rem;
   }
 }
 
