--- a/css/style.css
+++ b/css/style.css
@@ -142,10 +142,8 @@ a {
     font-size: 1.3rem;
     color: #000;
     opacity: 0.8;
-    margin-right: 6rem;
     width: 120px;
-    justify-self: center;
-    margin-left: -2rem; }
+    justify-self: start; }
     @media only screen and (max-width: 37.5em) {
       .header__sidebar {
         grid-row: 9 / 11; } }
@@ -224,9 +222,7 @@ a {
   .header__social {
     grid-row: 3 / 9;
     grid-column: 10 / 11;
-    justify-self: center;
-    align-self: center;
-    margin-left: 2rem; }
+    align-self: center; }
     @media only screen and (max-width: 37.5em) {
       .header__social {
         grid-row: 9 / 11; } }
