--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -7,9 +7,20 @@
   justify-content: center;
   justify-items: center;
   grid-row-gap: 5rem;
-
+  @media only screen and (max-width: $bp-small) {
+    grid-column: full-start / full-end;
+    padding: 10rem 5rem;
+  }
   img {
     width: 100%;
+  }
+  h3 {
+    @media only screen and (max-width: $bp-small) {
+      font-size: 4.6rem;
+    }
+    @media only screen and (max-width: $bp-xsSmall) {
+      font-size: 4rem;
+    }
   }
 
   &__list {
@@ -18,6 +29,10 @@
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center;
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: 1fr;
+      grid-row-gap: 0vh;
+    }
   }
 
   &__img {
@@ -30,5 +45,8 @@
     text-transform: uppercase;
     color: $color-grey-light-2;
     margin-top: -3px;
+    @media only screen and (max-width: $bp-small) {
+      margin-bottom: 4rem;
+    }
   }
 }
