--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -60,8 +60,8 @@
     font-size: 1.5rem;
     font-style: italic;
     margin-bottom: 1rem;
-    &:last-of-type {
-      margin-bottom: 4rem;
-    }
+    // &:last-of-type {
+    //   margin-bottom: 4rem;
+    // }
   }
 }
