--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,6 +21,7 @@
     align-self: center;
     justify-self: center;
     margin-right: 4rem;
+
     @media only screen and (max-width: $bp-medium) {
       justify-self: start;
       align-self: start;
@@ -40,16 +41,18 @@
     width: 120px;
     justify-self: start;
     margin-left: -14px;
+
     @media only screen and (max-width: $bp-medium) {
       margin-left: -40px;
     }
+
     @media only screen and (max-width: $bp-small) {
       grid-row: 9 / 10;
     }
   }
 
   &__big {
-    grid-row: 2 / 4;
+    grid-row: 1 / 4;
     grid-column: 1 / -1;
     align-self: center;
     justify-self: center;
@@ -92,6 +95,7 @@
     align-self: center;
     font: bold 8.5rem "sk", sans-serif;
     color: $color-black;
+    margin: 3rem 0 -1rem 0;
 
     @media only screen and (max-width: $bp-medium) {
       font-size: 7.5rem;
@@ -175,7 +179,6 @@
 .reveal {
   position: relative;
   // width: 7em;
-  margin: 4rem auto 0;
 
   & span {
     opacity: 0;
