--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -38,7 +38,8 @@
   font-size: 1.9rem;
 
   &--light {
-    color: $color-grey-light-1;
+    color: $color-primary;
+    font-size: 3.5rem;
   }
 
   &--dark {
